Allow oauth2 for non-imap as well

At least for smtp, it is apparently supported.

BUG: 445229